# ARCHER_9

./: .env.example  .gitignore  ARCHER Updates 25FEB2026.md  ARCHER.bat  ARCHER_Antigravity_Brief.docx  ARCHER_Brief.txt  ARCHER_COMPLETE_CHECKLIST.md  ARCHER_FINAL_SPEC_26FEB2026.md  ARCHER_NVIDIA_Free_Models_Guide.md  Architectural Analysis of the ARCHER Ecosystem.txt  CBT_fundamentals.md  Create-Shortcut.ps1  Launch-ARCHER.ps1  README.md  README2.md  behavioral_psychology.md  check_camera_lock.ps1  check_chroma_counts.py  check_wakeword.py  docker-compose.yml  emotional_intelligence.md  exercise_physiology.md  fix_obs_vcam.ps1  future_objective.md  habit_formation.md  list_cameras.py  load_psychology.py  load_trainer.py  mental_health_assessment.md  nutrition_science.md  openmemory.db-shm  openmemory.db-wal  pyproject.toml  reset_camera.ps1  scan_cameras.py  scan_cameras2.py  scan_cameras3.py  scan_dshow.py  scan_dshow2.py  scan_dshow3.py  (+13 more)
.claude/: settings.local.json
docker/coqui-tts/: Dockerfile  main.py
memory/: 2026-02-25.md
src/archer/: __init__.py  __main__.py  config.py
src/archer/agents/: AGENTS.md  __init__.py  orchestrator.py
src/archer/agents/assistant/: SOUL.md  __init__.py
src/archer/agents/finance/: SOUL.md
src/archer/agents/investment/: SOUL.md
src/archer/agents/observer/: SOUL.md
src/archer/agents/therapist/: SOUL.md
src/archer/agents/trainer/: SOUL.md
src/archer/core/: __init__.py  event_bus.py  toggle.py
src/archer/gui/: __init__.py  artifact_pane.py  conversation.py  main_window.py  orb_3d.py  orb_widget.py  tray.py  webcam_widget.py
src/archer/memory/: __init__.py  chromadb_store.py  maintenance.py  markdown_logger.py  openmemory_store.py  redis_buffer.py  sqlite_store.py
src/archer/observer/: __init__.py  analyzers.py  camera.py  interventions.py  overlay.py  pipeline.py
src/archer/tools/: __init__.py  pc_control.py  pc_tools.py
src/archer/voice/: __init__.py  audio.py  auth.py  halt.py  pipeline.py  stt.py  tts.py  vad.py  wake_word.py
tests/: __init__.py  test_config.py  test_event_bus.py  test_interventions.py  test_memory.py  test_observer.py  test_orchestrator.py  test_phase4.py  test_toggle.py
